--- a/src/templates/base/_head.pug
+++ b/src/templates/base/_head.pug
@@ -18,7 +18,7 @@ html(lang='ru')
 		title= title
 
 		//- Preload fonts
-		link(rel="preload" href=`./fonts/DrukWideCyr-Bold.woff2` as="font" type="font/woff2" crossorigin)
+		link(rel="preload" href=`./fonts/geometria-medium.woff2` as="font" type="font/woff2" crossorigin)
 
 		//- Favicons
 		link(rel="icon" type="image/x-icon" href=`${img}/favicons/favicon.ico`)
